# blackboxai-1744684701210

./: README.md
AstroProQt/: .gitignore  CMakeLists.txt  LICENSE  README.md  chartwidget.cpp  chartwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
AstroProQt/Calculators/: dashacalculator.cpp  dashacalculator.h  strengthcalculator.cpp  strengthcalculator.h  yogacalculator.cpp  yogacalculator.h
AstroProQt/Forms/: mainwindow.ui
AstroProQt/ephe/: README.md
AstroProQt/icons/: generate_icons.py
AstroProQt/styles/: dark.qss
AstroProQt/swiss/: sweph.c  swephexp.h
